Add test for all supported types.